Updated the radio buttons

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
           />
         </div>
 
-        <div class="drink-coffee">
+        <div class="form-group" id="drink-coffee">
           <p>Do you drink coffee?</p>
           <label
             ><input
               type="radio"
-              name="yes"
+              name="drink-coffe"
               id="yes"
               class="input-radio"
               checked
@@ -70,7 +70,7 @@
           <label
             ><input
               type="radio"
-              name="sometimes"
+              name="drink-coffe"
               id="sometimes"
               class="input-radio"
             />Sometimes</label
@@ -78,7 +78,7 @@
           <label
             ><input
               type="radio"
-              name="no"
+              name="drink-coffe"
               id="no"
               class="input-radio"
             />No</label
