Updated drop menu values

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="form-group" id="cold-coffee">
           <p>What is your favorite type of cold coffee?</p>
           <select id="dropdown" name="role" class="form-control" required>
-            <option disabled selected value>Select current role</option>
+            <option disabled selected value>Select your favorite type of cold coffee </option>
             <option value="iced">Iced Coffee</option>
             <option value="iced-espresso">Iced Espresso</option>
             <option value="brew">Cold Brew Coffee</option>
@@ -141,7 +141,7 @@
         <div class="form-group" id="hot-coffee">
           <p>What is your favorite type of hot coffee?</p>
           <select id="dropdown" name="role" class="form-control" required>
-            <option disabled selected value>Select current role</option>
+            <option disabled selected value>Select your favorite type of hot coffee</option>
             <option value="black">Black Coffee</option>
             <option value="brew">Brew Coffee</option>
             <option value="lait">Cafè Au Lait</option>
